# griot-core

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/griot_core/: __init__.py  _utils.py  contract.py  exceptions.py  guards.py  manifest.py  mock.py  reports.py  schema.py  types.py
src/griot_core/connectors/: __init__.py  base.py  registry.py
src/griot_core/executors/: __init__.py  container_runtime.py  registry.py  runtime.py  types.py  wasm_runtime.py
src/griot_core/export/: __init__.py  jsonschema.py
src/griot_core/integrations/: __init__.py  airflow.py  dagster.py  prefect.py
src/griot_core/models/: __init__.py  check.py  contract.py  enums.py  property.py  schema.py  schema_ref.py
src/griot_core/orchestration/: __init__.py  aggregator.py  orchestrator.py  splitter.py  types.py
src/griot_core/orchestration/dispatcher/: __init__.py  base.py  cloudrun.py  factory.py  kubernetes.py  lambda_dispatcher.py  local.py
src/griot_core/parsing/: __init__.py  json_parser.py  validator.py  yaml_parser.py
src/griot_core/privacy/: __init__.py  patterns.py
src/griot_core/reporting/: __init__.py  base.py  registry.py  reporter.py
src/griot_core/reporting/parsers/: dbt.py
src/griot_core/resolution/: __init__.py  merge.py  resolver.py
src/griot_core/scaffold/: codegen.py  dbt_codegen.py  dbt_mapping.py  engine.py  lockfile.py  type_mapping.py
src/griot_core/validation/: __init__.py  engine.py  profile.py  result.py  types.py
src/griot_core/workers/: __init__.py  base.py  cloudrun.py  kubernetes.py  lambda_worker.py  local.py  wasm_worker.py
