[project]
name = "griot-core"
version = "0.9.1"
description = "Core library for Griot data contracts - schema validation, mock generation, and AI manifests"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Griot Team" }
]
keywords = ["data-contracts", "validation", "schema", "data-quality", "odcs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies - minimal, just YAML parsing
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Scaffold - Jinja2 templates for code generation
scaffold = [
    "jinja2>=3.0",
]

# =============================================================================
# DataFrame-specific extras (composable)
# Install with: pip install griot-core[pandas] or griot-core[pandas,polars]
# =============================================================================

# Pandas DataFrame support with validation
pandas = [
    "pandas>=1.5.0",
    "pandera[io]>=0.18.0",
]

# Polars DataFrame support with validation
polars = [
    "polars>=0.19.0",
    "pandera[polars]>=0.18.0",
]

# Dask DataFrame support with validation
dask = [
    "dask[dataframe]>=2023.1.0",
    "pandera[dask]>=0.18.0",
]

# =============================================================================
# Convenience bundles
# =============================================================================

# All DataFrame types + scaffold
all = [
    "griot-core[pandas,polars,dask,scaffold]",
]

# Development dependencies
dev = [
    "griot-core[pandas]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/griot-data/griot-core"
Repository = "https://github.com/griot-data/griot-core"
Issues = "https://github.com/griot-data/griot-core/issues"
Changelog = "https://github.com/griot-data/griot-core/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/griot_core"]
artifacts = ["src/griot_core/scaffold/templates/**"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length enforced by ruff format

[tool.ruff.lint.per-file-ignores]
"src/griot_core/integrations/__init__.py" = ["F401"]  # Lazy imports via locals()
"src/griot_core/reporting/__init__.py" = ["F401"]  # Lazy imports via locals()

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["no-redef"]  # Try/except import fallback patterns in integrations

[[tool.mypy.overrides]]
module = [
    "griot_core.integrations.*",
    "griot_core.orchestration.dispatcher.kubernetes",
    "griot_core.orchestration.dispatcher.cloudrun",
    "griot_core.orchestration.dispatcher.lambda_dispatcher",
    "griot_core.workers.cloudrun",
]
ignore_errors = true

# =============================================================================
# Semantic Release Configuration
# Commit format: fix: → patch, feat: → minor, BREAKING CHANGE: → major
# =============================================================================
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/griot_core/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = false
